# Tetris

./: CMakeLists.txt  CMakePresets.json  a.cpp  in  main
src/: Board.cpp  Board.h  Field.cpp  Field.h  GameConstants.h  Render.cpp  Render.h  main.cpp
src/gameLogic/: Block.cpp  Block.h  BlockOnBoard.cpp  BlockOnBoard.h  BlockPattern.cpp  BlockPattern.h  BlockWithColor.cpp  BlockWithColor.h  BoolMatrix.h  BoolMatrix.hpp  BoolMatrix.tpp  GameBoard.cpp  GameBoard.h  GameState.cpp  GameState.h  Matrix.cpp  Matrix.h  Run.cpp  Run.h
src/gameLogic/Factory/: BlockFactory.cpp  BlockFactory.h  ColorFactory.cpp  ColorFactory.h  ColoredBlockFactory.cpp  ColoredBlockFactory.h
src/sfml/: NextBlockVisualization.cpp  NextBlockVisualization.h  UserInput.cpp  UserInput.h  Visualization.cpp  Visualization.h
src/smfl/: UserInput.cpp  UserInput.h  Visualization.cpp  Visualization.h
